--- a/ansible/templates/drone_launch.py.j2
+++ b/ansible/templates/drone_launch.py.j2
@@ -211,6 +211,7 @@ def generate_launch_description():
             drone_state_manager,
             mpc_node,
             command_converter_node,
+            trajectory_converter_node,
             env_builder_include,
             multi_agent_planner_include,
         ]
