--- a/ansible/templates/ros_packages_service.j2
+++ b/ansible/templates/ros_packages_service.j2
@@ -9,6 +9,7 @@ KillMode=control-group
 KillSignal=SIGTERM
 ExecStop=/bin/bash -c "pkill -f ros2cli.daemon.daemonize"
 TimeoutStopSec=5
+LimitRTPRIO=99
 
 [Install]
 WantedBy=multi-user.target
